# oop_lab_stream

./: .gitmodules  CMakeLists.txt
include/: diap.hpp  file_stream.hpp  frequency.hpp  istream.hpp  queue_stream.hpp  stdin_stream.hpp
src/: diap.cpp  file_stream.cpp  frequency.cpp  queue_stream.cpp  stdin_stream.cpp
tests/: CMakeLists.txt  unit.cpp
